--- a/config/_default/menus.yaml
+++ b/config/_default/menus.yaml
@@ -10,9 +10,9 @@ main:
   - name: Research
     url: '#accomplishments'
     weight: 30
-  - name: Talks
-    url: '#talks'
-    weight: 40
+  # - name: Talks
+  #  url: '#talks'
+  #  weight: 40
   - name: Publications
     url: '#featured'
     weight: 50
