--- a/config/_default/menus.yaml
+++ b/config/_default/menus.yaml
@@ -14,7 +14,7 @@ main:
   #  url: '#talks'
   #  weight: 40
   - name: Publications
-    url: '#featured'
+    url: '#publications'
     weight: 50
 
 # Link to a PDF of your resume/CV from the menu.
