--- a/config/_default/params.yaml
+++ b/config/_default/params.yaml
@@ -6,9 +6,9 @@
 # Appearance
 
 appearance:
-  theme_day: coffee
+  theme_day: minimal
   theme_night: minimal
-  font: minimal
+  font: classic
   font_size: L
 
 # SEO
