--- a/config/_default/params.yaml
+++ b/config/_default/params.yaml
@@ -6,10 +6,10 @@
 # Appearance
 
 appearance:
-  theme_day: minimal
+  theme_day: rose
   theme_night: minimal
-  font: rose
-  font_size: L
+  font: minimal
+  font_size: M
 
 # SEO
 
