--- a/config/_default/params.yaml
+++ b/config/_default/params.yaml
@@ -6,10 +6,10 @@
 # Appearance
 
 appearance:
-  theme_day: rose
+  theme_day: ocean
   theme_night: minimal
   font: minimal
-  font_size: M
+  font_size: L
 
 # SEO
 
