--- a/config/_default/menus.yaml
+++ b/config/_default/menus.yaml
@@ -20,5 +20,5 @@ main:
 # Link to a PDF of your resume/CV from the menu.
 # To enable, copy your resume/CV to `static/uploads/resume.pdf` and uncomment the lines below.
   - name: CV
-    url: uploads/CV_Chen_Dec2022.pdf
+    url: uploads/CV_Chen_Jan2023.pdf
     weight: 60
