--- a/config/_default/menus.yaml
+++ b/config/_default/menus.yaml
@@ -10,16 +10,16 @@ main:
   - name: Research
     url: '#accomplishments'
     weight: 30
-  # - name: Talks
-  #  url: '#talks'
-  #  weight: 40
   - name: Publications
     url: '#publications'
     weight: 50
+   - name: Poster
+    url: uploads/INSAR_VABS_Chen.pdf
+    weight: 60
 
 # Link to a PDF of your resume/CV from the menu.
 # To enable, copy your resume/CV to `static/uploads/resume.pdf` and uncomment the lines below.
   - name: CV
     url: uploads/CV_Chen_Mar2023.pdf
-    weight: 60
+    weight: 70
 
