--- a/config/_default/menus.yaml
+++ b/config/_default/menus.yaml
@@ -20,7 +20,12 @@ main:
     url: uploads/CV_Chen_Mar2023.pdf
     weight: 60
     
-  - name: Poster
+  - name: Poster1
     url: uploads/INSAR2023_VABS_Chen.pdf
     weight: 70
+    
+   - name: Poster2
+    url: uploads/INSAR2023_PEMCY_Chen.pdf
+    weight: 80 
+    
 
