--- a/config/_default/menus.yaml
+++ b/config/_default/menus.yaml
@@ -17,7 +17,7 @@ main:
 # Link to a PDF of your resume/CV from the menu.
 # To enable, copy your resume/CV to `static/uploads/resume.pdf` and uncomment the lines below.
   - name: CV
-    url: uploads/CV_Chen_Mar2023.pdf
+    url: uploads/CV_Chen_Dec2023.pdf
     weight: 60
 
 
